搭建配置管理模块

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <!--  聚合，用来集中管理各模块（注意这不叫继承！！） -->
     <modules>
         <module>discovery</module>
+        <module>config</module>
     </modules>
 
     <!--  *********************由此往下的所有内容均会被子模块继承****************************** -->
