--- a/config/pom.xml
+++ b/config/pom.xml
@@ -15,10 +15,12 @@
     <packaging>jar</packaging>
 
     <dependencies>
+        <!--  配置管理服务器端 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-config-server</artifactId>
         </dependency>
+        <!--  服务发现客户端 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-eureka</artifactId>
