--- a/discovery/pom.xml
+++ b/discovery/pom.xml
@@ -15,6 +15,7 @@
     <packaging>jar</packaging>
 
     <dependencies>
+        <!--  服务发现服务器端 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-eureka-server</artifactId>
