--- a/config/src/main/resources/config/user-service.yml
+++ b/config/src/main/resources/config/user-service.yml
@@ -5,6 +5,14 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
 
+spring:
+  datasource:
+    type: com.zaxxer.hikari.HikariDataSource
+    url: jdbc:mysql://localhost:3306/shop?zeroDateTimeBehavior=convertToNull&useSSL=false&useUnicode=true&characterEncoding=utf-8
+    username: root
+    password:
+    driver-class-name: com.mysql.jdbc.Driver
+
 server:
   context-path: /user
   port: 5000
