--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <mybatis.starter.version>1.1.1</mybatis.starter.version>
     </properties>
 
     <!--  依赖 -->
