--- a/user-service/src/main/resources/bootstrap.yml
+++ b/user-service/src/main/resources/bootstrap.yml
@@ -5,4 +5,12 @@ spring:
     config:
       uri: http://localhost:8888
       fail-fast: true
+  datasource:
+    type: com.zaxxer.hikari.HikariDataSource
+    url: jdbc:mysql://localhost:3306/shop?zeroDateTimeBehavior=convertToNull&useSSL=false&useUnicode=true&characterEncoding=utf-8
+    username: root
+    password:
+    driver-class-name: com.mysql.jdbc.Driver
 
+mybatis:
+  config-location: classpath:mybatis-config.xml
