搭建商品服务，测试成功

--- a/config/src/main/resources/config/gateway.yml
+++ b/config/src/main/resources/config/gateway.yml
@@ -23,6 +23,12 @@ zuul:
         stripPrefix: false
         sensitiveHeaders:
 
+    item-service:
+        path: /item/**
+        url: http://localhost:5001
+        stripPrefix: false
+        sensitiveHeaders:
+
 eureka:
   instance:
     prefer-ip-address: true
