--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>config</module>
         <module>gateway</module>
         <module>user-service</module>
+        <module>item-service</module>
     </modules>
 
     <!--  *********************由此往下的所有内容均会被子模块继承****************************** -->
