添加common服务，并加入内部依赖

--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -29,6 +29,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-eureka</artifactId>
         </dependency>
+        <!--  内部依赖 -->
+        <dependency>
+            <groupId>com.grc</groupId>
+            <artifactId>common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
