--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>gateway</module>
         <module>user-service</module>
         <module>item-service</module>
+        <module>common</module>
     </modules>
 
     <!--  *********************由此往下的所有内容均会被子模块继承****************************** -->
