将jsp转换为html，查询商品列表 接口

--- a/item-service/pom.xml
+++ b/item-service/pom.xml
@@ -47,6 +47,12 @@
             <artifactId>common</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <!--  PageHelper分页插件 -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>${mybatis.page-helper.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
