--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <mybatis.starter.version>1.1.1</mybatis.starter.version>
+        <mybatis.page-helper.version>4.1.6</mybatis.page-helper.version>
     </properties>
 
     <!--  依赖 -->
