修改BaseController  添加easyUI分页响应格式

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -16,4 +16,12 @@
         <java.version>1.8</java.version>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>4.1.6</version>
+        </dependency>
+    </dependencies>
+
 </project>
