图片上传接口

--- a/config/src/main/resources/config/item-service.yml
+++ b/config/src/main/resources/config/item-service.yml
@@ -8,3 +8,7 @@ eureka:
 server:
   context-path: /item
   port: 5001
+
+application:
+  files.localpath: E:\nginx\html
+  access_base_url: http://image.taotao.com
