把上一commit的依赖加到user-service的pom里面就没事了，好奇怪啊

--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -48,6 +48,23 @@
             <artifactId>common</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <!--  安全框架 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <!--  编码 -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.10</version>
+        </dependency>
+        <!--  JWT -->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.7.0</version>
+        </dependency>
     </dependencies>
 
 </project>
